# blagues-api-py

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  publish.yml
blagues_api/: __init__.py  main.py
tests/: test_blagues_api.py
